--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ build:
   stage: build
   before_script:
     - apt update
-    - apt install -y --no-install-recommends python3-certbot python3 python3-setuptools  python3-zope.interface python3-requests
+    - apt install -y --no-install-recommends python3-certbot python3 python3-setuptools  python3-zope.interface python3-requests dh-python
   script:
     - dpkg-buildpackage -b -us -uc
     - mkdir debbuild
